--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <div class="card">
                     <h3>안내 사항</h3>
                     <ul>
-                        <li><i class="fas fa-calendar-check"></i> <strong>오늘(목) 저녁까지</strong> 다락방 모임을 디모데에 체크해 주세요.</li>
+                        <li><i class="fas fa-calendar-check"></i><span><strong>오늘(목) 저녁까지</strong> 다락방 모임을 디모데에 체크해 주세요.</span></li>
                     </ul>
                 </div>
             </div>
@@ -361,3 +361,5 @@
     </script>
 </body>
 </html>
+
+
