--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                             <div>
                                 <span>복음 영상은 아래 링크를 사용하시면 됩니다:</span>
                                 <ul style="margin-top:10px; padding-left: 0; list-style-type: none;">
-                                    <li style="margin-top: 5px;"><i class="fab fa-youtube"></i> <a href="https://youtu.be/hch2iS64h7g?si=r8-lNgO-TeSD6DFo" target="_blank">담임목사님 복음 메시지</a></li>
-                                    <li><i class="fab fa-youtube"></i> <a href="https://youtu.be/19uJ2XhPKU4?si=EaOwRp_OhhXR2gDt" target="_blank">사영리 샌드아트</a></li>
+                                    <li style="margin-top: 5px;"><i class="fab fa-youtube"></i> <a href="https://youtu.be/hch2iS64h7g?si=r8-lNgO-TeSD6DFo" target="_blank">담임목사님 복음 메시지 (3분)</a></li>
+                                    <li><i class="fab fa-youtube"></i> <a href="https://youtu.be/19uJ2XhPKU4?si=EaOwRp_OhhXR2gDt" target="_blank">사영리 샌드아트 (7분)</a></li>
                                 </ul>
                             </div>
                         </li>
